# auth0-oauth-client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: test_pypi_publish.py
auth0_oauth_client/: __init__.py  admin.py  apps.py  client.py  errors.py  models.py  oauth.py  settings.py  typing.py
auth0_oauth_client/migrations/: 0001_initial.py
samples/: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
samples/sample_app/: asgi.py  settings.py  urls.py  wsgi.py
samples/sample_app/apps/core/: admin.py  apps.py  authentication_backends.py  models.py  views.py
samples/sample_app/apps/core/management/commands/: seed.py
samples/sample_app/apps/core/migrations/: 0001_initial.py
samples/sample_app/apps/core/templates/core/: account_linking.html  internal.html  welcome.html
samples/sample_app/support/: django_utills.py  utils.py
samples/scripts/: start-development.sh  start-formatter-lint.sh
scripts/: start-tests.sh
tests/: __init__.py  settings.py  test_client.py  test_models.py  test_oauth.py
