[project]
name = "auth0-oauth-client"
version = "0.4.0"
description = "A Django-focused Auth0 integration providing automated OIDC flows, account linking, and so on."
authors = [
    {name = "Tinuvi", email = "no-reply@tinuvi.com"}
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "auth0_oauth_client" },
]

[project.urls]
repository = "https://github.com/tinuvi/auth0-oauth-client"
"Bug Tracker" = "https://github.com/tinuvi/auth0-oauth-client/issues"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.9"
requests = "^2.32.5"
pyjwt = "^2.7.0"
auth0-python = "^4.13.0"

[tool.poetry.group.dev.dependencies]
### Format, lint, static type checker, among others
pre-commit = "*"
requests-mock = "*"
coverage = "*"
freezegun = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | samples
  )/
)
'''

[tool.isort]
force_single_line = true
line_length = 120
py_version = 312
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1
skip_glob = ["*/migrations/*", "samples/**"]

[tool.mypy]
python_version = "3.12"
exclude = [
    '^samples/.*',
]


# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true
show_error_context = false

# do not follow imports (except for ones found in typeshed)
follow_imports = "skip"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# allow untyped calls as a consequence of the options above
disallow_untyped_calls = false

# allow returning Any as a consequence of the options above
warn_return_any = false

# treat Optional per PEP 484
strict_optional = true

# ensure all execution paths are returning
warn_no_return = true

# lint-style cleanliness for typing needs to be disabled; returns more errors
# than the full run.
warn_redundant_casts = false
warn_unused_ignores = false

# The following are off by default since they're too noisy.
# Flip them on if you feel adventurous.
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sample_app.apps.core.views"
disable_error_code = "union-attr"

[[tool.mypy.overrides]]
module = "auth0_oauth_client.models"
disable_error_code = [
    "var-annotated",
    "attr-defined",
]